[package]
name = "warden-worker"
version = "0.1.0"
edition = "2021"
authors = ["deepubuntu"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
# Worker & Web APIs
worker = { version = "0.7.0", features = ["axum", "http", "d1"] }
worker-macros = { version = "0.6", features = ['http'] }
wasm-bindgen = "0.2.105"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Crypto", "CryptoKey", "SubtleCrypto", "WorkerGlobalScope", "Pbkdf2Params"] }
console_error_panic_hook = "0.1.7"

# Axum and Routing
axum = { version = "0.8", default-features = false, features=["json", "macros", "form"] }
tower-service = "0.3"
tower-http = { version = "0.5", features = ["cors"] }

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto & Encoding
jsonwebtoken = "9.2"
base64 = "0.21"
hex = "0.4"
rand = { version = "0.8" }
getrandom = { version = "0.3", features = ["wasm_js"] }
constant_time_eq = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde", "rng-rand"] }
log = "0.4"
thiserror = "1.0"
once_cell = "1.19"
console_log = "1.0.0"
